fixed issue with spacing on nominee page again

--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -514,7 +514,7 @@ p{
     @media (max-width: 1024px) {
       column-count: 2;
       column-gap: 20px;
-      height: 230px;
+      height: 100%;
     }
 
     @media (max-width: 768px) {
